// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxControlledExample.jsx 1`] = `
<DocumentFragment>
  <label
    class="t-checkbox"
  >
    <input
      class="t-checkbox__former"
      readonly=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      未选中
    </span>
  </label>
  <label
    class="t-checkbox t-is-checked"
  >
    <input
      checked=""
      class="t-checkbox__former"
      readonly=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      已选中
    </span>
  </label>
  <label
    class="t-checkbox t-is-disabled"
  >
    <input
      class="t-checkbox__former"
      disabled=""
      readonly=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      禁用未选中
    </span>
  </label>
  <label
    class="t-checkbox t-is-checked t-is-disabled"
  >
    <input
      checked=""
      class="t-checkbox__former"
      disabled=""
      readonly=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      禁用已选中
    </span>
  </label>
  <label
    class="t-checkbox t-is-indeterminate"
  >
    <input
      class="t-checkbox__former"
      readonly=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      半选状态
    </span>
  </label>
  <label
    class="t-checkbox t-is-disabled t-is-indeterminate"
  >
    <input
      class="t-checkbox__former"
      disabled=""
      readonly=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      半选状态已禁用
    </span>
  </label>
</DocumentFragment>
`;

exports[`CheckboxExample.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-form-check-group"
  >
    <label
      class="t-checkbox"
      display="inline"
      name="la"
    >
      <input
        class="t-checkbox__former"
        readonly=""
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        加辣
      </span>
    </label>
    <label
      class="t-checkbox"
      display="inline"
      name="ma"
    >
      <input
        class="t-checkbox__former"
        readonly=""
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        加麻
      </span>
    </label>
    <label
      class="t-checkbox"
      display="inline"
      name="nocong"
    >
      <input
        class="t-checkbox__former"
        readonly=""
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        不要葱花
      </span>
    </label>
  </div>
</DocumentFragment>
`;
